--- a/style.css
+++ b/style.css
@@ -7,19 +7,12 @@
 }
 
 body {
-    min-height: 100vh;
-    padding: 6rem;
+    padding: 4rem;
     background-color: var(--cor-fundo);
     font-family: var(--font-family);
     display: flex;
-    font-size: 2rem;
     font-weight: 600;
     flex-direction: column;
-    align-items: center;
-}
-
-body div {
-    padding: 2rem;
     text-align: center;
 }
 
@@ -28,23 +21,27 @@ body h1 {
 }
 
 body h3 {
-    padding: 1rem;
+    padding: 1.5rem 0;
     font-size: 1.5rem;
 }
 
 body .mensagem {
     background-color: rgba(0, 0, 0, .2);
     color: var(--cor-branca);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
-    margin: 2rem;
+    margin: 2rem 0;
     border: 5px solid var(--cor-primaria);
     border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+}
+body .mensagem div {
+    padding: 2rem;
 }
 
 body .mensagem .box {
-    margin: 1rem;
-    padding: 1rem;
+    padding: 1.5rem;
     border: 2.5px solid var(--cor-primaria);
     border-radius: 16px;
 }
