--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body h3 {
 }
 
 body .btn-jogar{
+    margin-top: 1rem;
     align-self: center;
     padding: 1rem 2rem;
     border: 2px solid var(--cor-secundaria);
@@ -54,7 +55,6 @@ body .mensagem {
     font-size: 1.5rem;
     font-weight: 400;
     margin: 2rem 0;
-    border: 5px solid var(--cor-primaria);
     border-radius: 16px;
     display: flex;
     flex-direction: column;
